--- a/trump_tariffs/templates/hc_map_animated.html
+++ b/trump_tariffs/templates/hc_map_animated.html
@@ -13,7 +13,7 @@
 
             
         <!-- Link to the external CSS file -->
-        <link rel="stylesheet" href="/static/css/styles.css">
+        <link rel="stylesheet" href="../static/css/styles.css">
 
         <script>
             // Inject the user_id into the JavaScript from Flask
@@ -79,7 +79,7 @@
 
 
     <!-- Load JS File -->
-    <script type="module"  src="/static/hc_map_animated.js"></script>
+    <script type="module"  src="../static/hc_map_animated.js"></script>
 
 </body>
 </html>
