--- a/trump_tariffs/templates/simple.html
+++ b/trump_tariffs/templates/simple.html
@@ -17,11 +17,12 @@
     <link rel="stylesheet" href="../static/css/styles.css">
 
     <script>
-        var user_id = "data"; // Inject user ID (static fallback for now)
+        var user_id = "data"; // Inject user ID 
     </script>
 </head>
 <body>
 
+    <div class="right-content">
     <!-- Controls -->
     <div id="controls" class="slider-wrapper">
         <div class="slider-title">Which tariffs?</div>
@@ -37,6 +38,8 @@
 
     <!-- Map Container -->
     <div id="container"></div>
+
+</div>
 
     <!-- Load the simple JS logic -->
     <script type="module" src="../static/simple.js"></script>
