labels on tariff map

--- a/trump_tariffs/templates/hc_map_static.html
+++ b/trump_tariffs/templates/hc_map_static.html
@@ -13,7 +13,7 @@
 
             
         <!-- Link to the external CSS file -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+        <link rel="stylesheet" href="/static/css/styles.css">
 
         <script>
             // Inject the user_id into the JavaScript from Flask
