--- a/trump_tariffs/templates/simple.html
+++ b/trump_tariffs/templates/simple.html
@@ -29,8 +29,8 @@
         <div class="slider-stack">
             <div class="slider-labels">
                 <span>Pre Jan 2025</span>
-                <span>During 90 Day Pause</span>
-                <span>After 90 Day Pause</span>
+                <span>During 90 day pause</span>
+                <span>After 90 day pause</span>
             </div>
             <input type="range" id="tariff_structureSlider" min="1" max="3" step="1">
         </div>
