--- a/trump_tariffs/templates/hc_map_animated.html
+++ b/trump_tariffs/templates/hc_map_animated.html
@@ -25,7 +25,7 @@
 <body>
 
     <div id="mapTitleBlock" style="padding: 20px 30px;">
-        <h1 style="margin: 0; font-size: 1.8em;">Uncovering the real size of “reciprocal” tariffs</h1>
+        <h1 style="margin: 0; font-size: 1.8em;">Uncovering the real size of the new US tariffs</h1>
         <p style="margin: 5px 0 20px 0; font-size: 1em; color: #555;">
           Trade-weighted applied tariffs on US imports. Click on the bubbles for breakdown.
         </p>
@@ -43,8 +43,8 @@
             <!-- Labels -->
             <div class="slider-labels">
                 <span>Pre Jan 2025</span>
-                <span>During 90 Day Pause</span>
-                <span>After 90 Day Pause</span>
+                <span>During 90 day pause</span>
+                <span>After 90 day pause</span>
             </div>
         
             <!-- Slider -->
