--- a/trump_tariffs/templates/simple.html
+++ b/trump_tariffs/templates/simple.html
@@ -33,9 +33,9 @@
         <div class="slider-stack">
             <div class="slider-title">Which tariffs?</div>
             <div class="slider-labels">
-                <span><strong>Pre</strong> <br>Jan 2025</span>
-                <span><strong>During</strong> <br>90 day pause</span>
-                <span><strong>After</strong> <br>90 day pause</span>
+                <span><strong>Pre</strong> <br>January 2025</span>
+                <span><strong>During</strong> <br>90-day pause</span>
+                <span><strong>After</strong> <br>90-day pause</span>
             </div>
             <input type="range" id="tariff_structureSlider" min="1" max="3" step="1">
         </div>
