--- a/trump_tariffs/templates/simple_w_data.html
+++ b/trump_tariffs/templates/simple_w_data.html
@@ -30,7 +30,9 @@
 </head>
 <body>
 
+
     <div class="right-content">
+        <p>the tariff for brazil is 14%</p>
     <!-- Controls -->
     <div id="controls" class="slider-wrapper">
         <div class="slider-stack">
